# composer_tui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  FUTURE_FEATURES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  IMPLEMENTATION_PLAN_V3.md  IMPLEMENTATION_PLAN_V4.md
src/: app.rs  config.rs  gh_status.rs  git_status.rs  lib.rs  main.rs  state.rs  tab.rs  terminal.rs  workspace.rs  worktree.rs
src/terminal/: screen.rs
src/ui/: header.rs  main_panel.rs  mod.rs  sidebar.rs  status_bar.rs
