[package]
name = "composer_tui"
version = "0.1.0"
edition = "2021"
authors = ["composer_tui contributors"]
description = "Terminal-based tool for orchestrating parallel AI coding agents"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
directories = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
