[package]
name = "composer_tui"
version = "0.1.2"
edition = "2021"
authors = ["composer_tui contributors"]
description = "Terminal-based tool for orchestrating parallel AI coding agents"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
directories = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
git2 = { version = "0.19", default-features = false }
portable-pty = "0.9"
vte = "0.13"

[dev-dependencies]
